--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -23,6 +23,12 @@
     font-size:2.5rem;
     font-weight:bold;
 }
+.portfolio div
+{
+    color:var(--orange);
+    font-size:2.5rem;
+    font-weight:bold;
+}
 
 
 /*slider*/
